--- a/gotaku4j-webui/src/main/resources/templates/fragments/head.html
+++ b/gotaku4j-webui/src/main/resources/templates/fragments/head.html
@@ -25,6 +25,7 @@
 <script th:src="|../js/utils.js?${js_utils_js}|"></script>
 <script th:src="|../js/play-ws.js?${js_play_ws_js}|"></script>
 <script th:src="|../js/play.js?${js_play_js}|"></script>
+<link rel="stylesheet" type="text/css" th:href="|../css/play.css?${css_play_css}|"></link>
 </head>
 
 </html>
