--- a/gotaku4j-webui/src/main/resources/templates/index.html
+++ b/gotaku4j-webui/src/main/resources/templates/index.html
@@ -10,32 +10,24 @@
   <div class="container">
     <div class="row bg-dark my-3 p-1">
       <div class="col-12">
-        <div class="float-right text-right">
-          <button class="btn btn-primary btn-sm text-white" id="btn-start-game">スタートメニュー</button>
+        <div class="text-end text-white">
+          <span id="span-player"></span> <a class="btn btn-primary btn-sm" href=".">スタートメニュー </a>
         </div>
       </div>
     </div>
-    <div id="div-start-ui" class="row" style="display: none">
-      <div class="col-12">
-        <div id="div-book-titles-ui" class="row mb-3">
-          <div class="col-12">
-            <div id="btn-group-book-titles" class=""></div>
-          </div>
-        </div>
-        <div th:include="/fragments/table-ranking.html::fcontent" th:remove="tag"></div>
-      </div>
-    </div>
+    <div th:include="/fragments/player-select.html::fcontent" th:remove="tag"></div>
+    <div th:include="/fragments/book-select.html::fcontent" th:remove="tag"></div>
     <div id="div-play-ui" class="row" style="display: none">
-      <div class="col-md-7 mincho">
+      <div class="col-md-7">
         <div class="card card-default">
           <div class="card-header h5 text-center">
             第<span id="span-stage-quiz-number">0</span>問
           </div>
           <div class="card-body">
-            <p id="div-question" class="h3"></p>
+            <p id="div-question" class="h4"></p>
           </div>
         </div>
-        <div class="card border-white">
+        <div class="card border-white div-selections">
           <button id="btn-s-0" data-selection=0
             class="btn btn-outline-dark btn-lg btn-selection m-2" tabindex="0" disabled></button>
           <button id="btn-s-1" data-selection=1
@@ -54,10 +46,10 @@
             <div class="row">
               <div class="col-12">
                 <h6>
-                  <span id="span-book-title">1</span>
+                  <span id="span-book-title"></span>
                 </h6>
                 <h6>
-                  ステージ <span id="span-stage-number">1</span>: <span id="span-border-number">4</span>問
+                  ステージ <span id="span-stage-number">0</span>: <span id="span-border-number">0</span>問
                   正解で合格
                 </h6>
 
@@ -89,47 +81,50 @@
             </div>
           </div>
         </div>
-        <div class="card card-default">
+        <div class="card card-default mb-2">
           <div class="card-body">
             <p>
-              <span id="div-prev-question"></span> <span id="div-jadge"></span>
+              <span class="badge bg-secondary">問題</span> <span id="div-prev-question"></span>
             </p>
             <p>
-              <span id="div-prev-answer"></span>
+              <span class="badge bg-success">正解</span> <span id="div-prev-answer"></span>
+            </p>
+            <p class="text-end">
+              <span id="div-jadge"></span> <span id="div-prev-selection" class="text-muted small"></span>
             </p>
           </div>
         </div>
         <div class="text-right">
-          残り<span id="span-time" class="badge badge-secondary"></span>秒
+          残り<span id="span-time" class="badge bg-secondary"></span>秒
         </div>
       </div>
     </div>
   </div>
-  <audio id="audio-ok" preload="auto">
+  <audio id="audio-ok" class="audio" preload="auto">
     <source src="../audio/se_quizright_1.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-ng" preload="auto">
+  <audio id="audio-ng" class="audio" preload="auto">
     <source src="../audio/se_quizmistake_1.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-next-stage" preload="auto">
+  <audio id="audio-next-stage" class="audio" preload="auto">
     <source src="../audio/arasuji_13.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-select-book" preload="auto" loop>
+  <audio id="audio-select-book" class="audio" preload="auto" loop>
     <source src="../audio/bgm_stagebgm_04_hq.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-show-quiz" preload="auto">
+  <audio id="audio-show-quiz" class="audio" preload="auto">
     <source src="../audio/bgm_coinin_1.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-game-over" preload="auto">
+  <audio id="audio-game-over" class="audio" preload="auto">
     <source src="../audio/bgm_gameover_1.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-timer" preload="auto">
+  <audio id="audio-timer" class="audio" preload="auto">
     <source src="../audio/se_te.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-border-line" preload="auto">
+  <audio id="audio-border-line" class="audio" preload="auto">
     <source src="../audio/se_pipipi_2.mp3" type="audio/mpeg" />
   </audio>
-  <audio id="audio-stage-1" preload="auto">
+  <audio id="audio-stage-1" class="audio" preload="auto">
     <source src="../audio/morning_2.mp3" type="audio/mpeg" />
   </audio>
 </body>
