--- a/gotaku4j-webui/src/main/resources/templates/fragments/player-select.html
+++ b/gotaku4j-webui/src/main/resources/templates/fragments/player-select.html
@@ -9,6 +9,9 @@
           class="list-group-item list-group-item-info btn-player"></button>
       </div>
       <hr>
+      <div class="text-end">
+        <button id="btn-reload-books" class="btn bg-light">問題集の再読み込み</button>
+      </div>
     </div>
   </div>
 </div>
