--- a/gotaku4j-webui/src/main/resources/templates/fragments/book-select.html
+++ b/gotaku4j-webui/src/main/resources/templates/fragments/book-select.html
@@ -7,11 +7,13 @@
         <h5>問題集選択</h5>
         <div class="col-12">
           <div id="btn-group-book-titles" class="btn-group mb-3" role="group">
-            <span th:each="name,stat : ${books}"> <input type="radio" class="btn-check"
-              name="options" autocomplete="off" th:id="|option${stat.index}|"> <label
-              class="btn btn-outline-secondary btn-sm label-book-title"
-              th:for="|option${stat.index}|" th:text="${name}"></label></span>
+            <span th:each="name,stat : ${books}"> <input type="radio" class="btn-check" name="options"
+                autocomplete="off" th:id="|option${stat.index}|"> <label
+                class="btn btn-outline-secondary btn-sm label-book-title" th:for="|option${stat.index}|"
+                th:text="${name}"></label></span>
           </div>
+          <h5>出題ジャンル</h5>
+          <div id="div-ganres" class="mb-2"></div>
           <div>
             <button id="btn-start-game" class="btn btn-success btn-sm" disabled>ゲームをはじめる</button>
           </div>
@@ -50,6 +52,12 @@
             <tbody id="tbody-rate-ranking">
             </tbody>
           </table>
+        </div>
+      </div>
+      <div id="div-results" class="row">
+        <div class="col-12">
+          <h5>回答の記録</h5>
+          <div id="div-tbl-results"></div>
         </div>
       </div>
     </div>
