--- a/gotaku4j-webui/src/main/resources/templates/index.html
+++ b/gotaku4j-webui/src/main/resources/templates/index.html
@@ -181,33 +181,35 @@
           <button id="btn-finish-game" class="btn btn-danger btn-sm">終了</button>
         </div>
       </div>
-      <audio id="audio-ok" class="audio" preload="auto">
-        <source src="../audio/se_quizright_1.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-ng" class="audio" preload="auto">
-        <source src="../audio/se_quizmistake_1.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-next-stage" class="audio" preload="auto">
-        <source src="../audio/arasuji_13.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-select-book" class="audio" preload="auto" loop>
-        <source src="../audio/bgm_stagebgm_04_hq.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-show-quiz" class="audio" preload="auto">
-        <source src="../audio/bgm_coinin_1.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-game-over" class="audio" preload="auto">
-        <source src="../audio/bgm_gameover_1.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-timer" class="audio" preload="auto">
-        <source src="../audio/se_te.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-border-line" class="audio" preload="auto">
-        <source src="../audio/se_pipipi_2.mp3" type="audio/mpeg" />
-      </audio>
-      <audio id="audio-stage-1" class="audio" preload="auto">
-        <source src="../audio/morning_2.mp3" type="audio/mpeg" />
-      </audio>
+    </div>
+  </div>
+  <audio id="audio-ok" class="audio" preload="auto">
+    <source src="../audio/se_quizright_1.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-ng" class="audio" preload="auto">
+    <source src="../audio/se_quizmistake_1.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-next-stage" class="audio" preload="auto">
+    <source src="../audio/arasuji_13.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-select-book" class="audio" preload="auto" loop>
+    <source src="../audio/bgm_stagebgm_04_hq.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-show-quiz" class="audio" preload="auto">
+    <source src="../audio/bgm_coinin_1.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-game-over" class="audio" preload="auto">
+    <source src="../audio/bgm_gameover_1.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-timer" class="audio" preload="auto">
+    <source src="../audio/se_te.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-border-line" class="audio" preload="auto">
+    <source src="../audio/se_pipipi_2.mp3" type="audio/mpeg" />
+  </audio>
+  <audio id="audio-stage-1" class="audio" preload="auto">
+    <source src="../audio/morning_2.mp3" type="audio/mpeg" />
+  </audio>
 </body>
 
 </html>
