--- a/gotaku4j-webui/src/main/resources/templates/fragments/head.html
+++ b/gotaku4j-webui/src/main/resources/templates/fragments/head.html
@@ -6,25 +6,20 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
-    integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.js"></script>
-  <script src="../js/lib/parseUri.js"></script>
-  <script th:src="|../js/utils.js?${js_utils_js}|"></script>
-  <script th:src="|../js/play-ws.js?${js_play_ws_js}|"></script>
-  <script th:src="|../js/play.js?${js_play_js}|"></script>
-  <link rel="stylesheet" type="text/css" th:href="|../css/play.css?${css_play_css}|">
+  <link rel="stylesheet" th:href="|/webjars/bootstrap/${webjars.bootstrap}/dist/css/bootstrap.min.css|">
+  <link rel="stylesheet" th:href="|/webjars/datatables/${webjars.datatables}/css/dataTables.bootstrap5.min.css|">
+  <script
+    th:src="|/webjars/fortawesome__fontawesome-free/${webjars.fortawesome\_\_fontawesome_free}/js/all.min.js|"></script>
+  <script th:src="|/webjars/jquery/${webjars.jquery}/dist/jquery.min.js|"></script>
+  <script th:src="|/webjars/bootstrap/${webjars.bootstrap}/dist/js/bootstrap.bundle.min.js|"></script>
+  <script th:src="|/webjars/sweetalert2/${webjars.sweetalert2}/dist/sweetalert2.all.min.js|"></script>
+  <script th:src="|/webjars/datatables/${webjars.datatables}/js/jquery.dataTables.min.js|"></script>
+  <script th:src="|/webjars/datatables/${webjars.datatables}/js/dataTables.bootstrap5.min.js|"></script>
+  <script src="/js/lib/parseUri.js"></script>
+  <script th:src="|/js/utils.js?${js_utils_js}|"></script>
+  <script th:src="|/js/play-ws.js?${js_play_ws_js}|"></script>
+  <script th:src="|/js/play.js?${js_play_js}|"></script>
+  <link rel="stylesheet" type="text/css" th:href="|/css/play.css?${css_play_css}|">
 </head>
 
 </html>
